# ready_player_zero

./: .gitignore  JoustEnv.py  README.md  console_wrapper.lua  joust_env.py  joust_ppo.py  joust_start_1p.save  joust_start_2p.save  mame  mame_client.py  mame_console_interface.py  mame_gym.py  mame_server.lua  mamegym.py  mem_codes.txt  profile.html  profile.json  puppet.lua  puppet_master.py  pyproject.toml  setup.py  train_joust.py
mame_gym/: __init__.py  mame_client.py  mame_gym.py  mame_server.lua
ready_player_zero/: __init__.py  mame_client.py  mame_gym.py  mame_server.lua
scripts/: launch_debug.sh  launch_mame.sh  mame_terminal.sh  run_mame.sh
states/: joust_start_1p.state  joust_start_1p_release.state
tests/: test_mame_gym.py  tests.py
